Fixed smartphone images from overflowing index.html

--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,14 @@
   
     
   }
+
+  @media (max-width: 700px) {
+
+    .resize-img-vw {
+        width: 60wv !important ;
+    }
+    
+    }
   
 
 
